# deadcat

./: .gitignore  AGENTS.md  README.md  biome.json  flake.nix  index.html  justfile  mock-markets.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
src/: actions.ts  bootstrap.ts  main.ts  mock-markets.ts  state.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/deadcat-sdk/: Cargo.toml  DESIGN.md  simplicityhl-amm-pool-covenant-design-doc.md  simplicityhl-contract-design-doc.md  simplicityhl-lmsr-pool-covenant-design-doc.md  simplicityhl-maker-order-covenant-design-doc.md
src-tauri/crates/deadcat-sdk/contract/: amm_pool.simf  lmsr_pool.simf  maker_order.simf  market-currency-conventions.md  prediction_market.simf
src-tauri/crates/deadcat-sdk/deadcat-store/: Cargo.toml  prediction-market-store-design.md
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/00000000000000_diesel_initial_setup/: up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-20-000001_create_tables/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-20-000002_add_nonce_and_issuance_data/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-21-000001_add_metadata/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-22-000001_add_nostr_event_columns/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-24-000001_create_amm_pools/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-26-000001_create_pool_state_snapshots/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-26-000002_drop_amm_pool_reserves/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-27-000001_drop_starting_yes_price/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-28-000001_add_market_state_txids/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-02-28-000002_create_lmsr_pools/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-03-02-000001_add_expired_market_state_columns/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-03-13-000001_slot_store_reset/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-03-19-000001_add_order_creation_fields/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-03-20-000001_create_price_history/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-03-21-000001_node_owned_lmsr_history/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/migrations/2026-03-21-000002_add_order_deletion_fields/: down.sql  up.sql
src-tauri/crates/deadcat-sdk/deadcat-store/src/: conversions.rs  electrum_chain.rs  error.rs  lib.rs  schema.rs  store.rs  sync.rs
src-tauri/crates/deadcat-sdk/deadcat-store/src/models/: amm_pool.rs  candidate.rs  maker_order.rs  market.rs  mod.rs  pool_state_snapshot.rs  utxo.rs
src-tauri/crates/deadcat-sdk/deadcat-store/tests/: integration.rs
src-tauri/crates/deadcat-sdk/docs/: lmsr-admin-adjust-testing.md  maker-order-covenant-design.md  simplicity-test-methodology.md
src-tauri/crates/deadcat-sdk/src/: announcement.rs  assembly.rs  chain.rs  chain_watcher.rs  contract.rs  error.rs  history.rs  lib.rs  network.rs  node.rs  oracle.rs  order_announcement.rs  order_discovery.rs  params.rs  pool.rs  prediction_market_scan.rs  pset.rs  sdk.rs  state.rs  taproot.rs  testing.rs  witness.rs
src-tauri/crates/deadcat-sdk/src/amm_pool/: assembly.rs  chain_walk.rs  contract.rs  math.rs  mod.rs  params.rs  witness.rs
src-tauri/crates/deadcat-sdk/src/amm_pool/pset/: creation.rs  lp_deposit.rs  lp_withdraw.rs  mod.rs  swap.rs
src-tauri/crates/deadcat-sdk/src/discovery/: attestation.rs  config.rs  events.rs  market.rs  mod.rs  pool.rs  service.rs  store_trait.rs
src-tauri/crates/deadcat-sdk/src/lmsr_pool/: api.rs  assembly.rs  c_eval.rs  chain_walk.rs  contract.rs  identity.rs  math.rs  mod.rs  params.rs  table.rs  witness.rs  witness_decode.rs
src-tauri/crates/deadcat-sdk/src/maker_order/: contract.rs  mod.rs  params.rs  taproot.rs  witness.rs
src-tauri/crates/deadcat-sdk/src/maker_order/pset/: cancel_order.rs  create_order.rs  fill_order.rs  mod.rs
src-tauri/crates/deadcat-sdk/src/prediction_market/: anchor.rs  assembly.rs  contract.rs  mod.rs  oracle.rs  params.rs  state.rs  witness.rs
src-tauri/crates/deadcat-sdk/src/prediction_market/pset/: cancellation.rs  creation.rs  expire_transition.rs  expiry_redemption.rs  initial_issuance.rs  issuance.rs  mod.rs  oracle_resolve.rs  post_resolution_redemption.rs
src-tauri/crates/deadcat-sdk/src/pset/: cancellation.rs  creation.rs  expiry_redemption.rs  initial_issuance.rs  issuance.rs  mod.rs  oracle_resolve.rs  post_resolution_redemption.rs
src-tauri/crates/deadcat-sdk/src/sdk/: recovery.rs
src-tauri/crates/deadcat-sdk/src/trade/: convert.rs  mod.rs  pset.rs  router.rs  types.rs
src-tauri/crates/deadcat-sdk/tests/: contract_compilation.rs  discovery.rs  elements_env_execution.rs  lmsr_pool.rs  lmsr_trade.rs  maker_order.rs  node.rs  sdk.rs  trade.rs
src-tauri/icons/: icon.icns
src-tauri/src/: chain_adapter.rs  commands.rs  discovery.rs  lib.rs  main.rs  payment_commands.rs  state.rs  wallet_store.rs
src-tauri/src/payments/: boltz.rs
src-tauri/src/wallet/: manager.rs  mod.rs  persister.rs  types.rs
src-tauri/tests/: nostr_discovery.rs
src/api/: tauri.ts
src/components/: chart-series.test.ts  chart-series.ts  create.ts  detail.test.ts  (+7 more)
(+39 files in other folders)
