[package]
name = "deadcat-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
simplicityhl = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
lwk_wollet = { version = "0.14", features = ["electrum"] }
lwk_signer = "0.14"
lwk_common = "0.14"
rand = "0.8"
hex = "0.4"
log = "0.4"

[dev-dependencies]
serde_json = "1"
