[package]
name = "deadcat-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
simplicityhl = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
lwk_wollet = { version = "0.14", features = ["electrum"] }
lwk_signer = "0.14"
lwk_common = "0.14"
rand = "0.8"
hex = "0.4"
log = "0.4"
electrum-client = "0.21"
serde_json = "1"
nostr-sdk = "0.38"

[features]
testing = []

[dev-dependencies]
deadcat-sdk = { path = ".", features = ["testing"] }
lwk_test_util = "0.14"
tempfile = "3.25.0"
