[package]
name = "deadcat-store"
version = "0.1.0"
edition = "2024"

[dependencies]
deadcat-sdk = { path = ".." }
diesel = { version = "2", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2"
thiserror = "2"
serde_json = "1"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
electrum-client = "0.21"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
